// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FooterColumns > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class="">
    <div>
      <h3 data-slot="label" class="">Community</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://nuxters.nuxt.com" rel="noopener noreferrer" target="_blank" data-slot="link"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLeadingIcon" class=""></svg><span data-slot="linkLabel" class="">Nuxters<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://github.com/nuxt" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt on GitHub<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Documentation<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Design Kit<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Enterprise</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Support<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Agencies<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Jobs<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Sponsors<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Solutions</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://content.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Content<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://devtools.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt DevTools<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://image.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Image<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://pohon.vinicunca.dev/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Pohon UI<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
      </ul>
    </div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`FooterColumns > renders with class correctly 1`] = `
"<nav data-slot="root" class="px-10">
  <!--v-if-->
  <div data-slot="center" class="">
    <div>
      <h3 data-slot="label" class="">Community</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://nuxters.nuxt.com" rel="noopener noreferrer" target="_blank" data-slot="link"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLeadingIcon" class=""></svg><span data-slot="linkLabel" class="">Nuxters<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://github.com/nuxt" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt on GitHub<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Documentation<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Design Kit<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Enterprise</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Support<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Agencies<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Jobs<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Sponsors<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Solutions</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://content.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Content<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://devtools.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt DevTools<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://image.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Image<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://pohon.vinicunca.dev/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Pohon UI<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
      </ul>
    </div>
  </div>
  <!--v-if-->
</nav>"
`;

exports[`FooterColumns > renders with column-label slot correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class="">
    <div>
      <h3 data-slot="label" class="">Column label slot</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://nuxters.nuxt.com" rel="noopener noreferrer" target="_blank" data-slot="link"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLeadingIcon" class=""></svg><span data-slot="linkLabel" class="">Nuxters<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://github.com/nuxt" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt on GitHub<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Documentation<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Design Kit<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Column label slot</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Support<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Agencies<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Jobs<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Sponsors<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Column label slot</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://content.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Content<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://devtools.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt DevTools<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://image.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Image<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://pohon.vinicunca.dev/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Pohon UI<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
      </ul>
    </div>
  </div>
  <!--v-if-->
</nav>"
`;

exports[`FooterColumns > renders with columns correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class="">
    <div>
      <h3 data-slot="label" class="">Community</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://nuxters.nuxt.com" rel="noopener noreferrer" target="_blank" data-slot="link"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLeadingIcon" class=""></svg><span data-slot="linkLabel" class="">Nuxters<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://github.com/nuxt" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt on GitHub<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Documentation<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Design Kit<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Enterprise</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Support<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Agencies<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Jobs<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Sponsors<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Solutions</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://content.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Content<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://devtools.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt DevTools<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://image.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Image<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://pohon.vinicunca.dev/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Pohon UI<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
      </ul>
    </div>
  </div>
  <!--v-if-->
</nav>"
`;

exports[`FooterColumns > renders with default slot correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class="">Default slot</div>
  <!--v-if-->
</nav>"
`;

exports[`FooterColumns > renders with left slot correctly 1`] = `
"<nav data-slot="root" class="">
  <div data-slot="left" class="">Left slot</div>
  <div data-slot="center" class="">
    <div>
      <h3 data-slot="label" class="">Community</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://nuxters.nuxt.com" rel="noopener noreferrer" target="_blank" data-slot="link"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLeadingIcon" class=""></svg><span data-slot="linkLabel" class="">Nuxters<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://github.com/nuxt" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt on GitHub<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Documentation<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Design Kit<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Enterprise</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Support<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Agencies<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Jobs<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Sponsors<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Solutions</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://content.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Content<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://devtools.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt DevTools<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://image.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Image<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://pohon.vinicunca.dev/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Pohon UI<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
      </ul>
    </div>
  </div>
  <!--v-if-->
</nav>"
`;

exports[`FooterColumns > renders with link slot correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class="">
    <div>
      <h3 data-slot="label" class="">Community</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://nuxters.nuxt.com" rel="noopener noreferrer" target="_blank" data-slot="link">Link slot</a></li>
        <li data-slot="item" class=""><a href="https://github.com/nuxt" rel="noopener noreferrer" target="_blank" data-slot="link">Link slot</a></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">Link slot</button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">Link slot</button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Enterprise</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><button type="button" data-slot="link">Link slot</button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">Link slot</button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">Link slot</button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">Link slot</button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Solutions</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://content.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">Link slot</a></li>
        <li data-slot="item" class=""><a href="https://devtools.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">Link slot</a></li>
        <li data-slot="item" class=""><a href="https://image.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">Link slot</a></li>
        <li data-slot="item" class=""><a href="https://pohon.vinicunca.dev/" rel="noopener noreferrer" target="_blank" data-slot="link">Link slot</a></li>
      </ul>
    </div>
  </div>
  <!--v-if-->
</nav>"
`;

exports[`FooterColumns > renders with link-label slot correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class="">
    <div>
      <h3 data-slot="label" class="">Community</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://nuxters.nuxt.com" rel="noopener noreferrer" target="_blank" data-slot="link"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLeadingIcon" class=""></svg><span data-slot="linkLabel" class="">Link label slot<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://github.com/nuxt" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Link label slot<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Link label slot<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Link label slot<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Enterprise</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Link label slot<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Link label slot<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Link label slot<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Link label slot<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Solutions</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://content.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Link label slot<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://devtools.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Link label slot<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://image.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Link label slot<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://pohon.vinicunca.dev/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Link label slot<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
      </ul>
    </div>
  </div>
  <!--v-if-->
</nav>"
`;

exports[`FooterColumns > renders with link-leading slot correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class="">
    <div>
      <h3 data-slot="label" class="">Community</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://nuxters.nuxt.com" rel="noopener noreferrer" target="_blank" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Nuxters<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://github.com/nuxt" rel="noopener noreferrer" target="_blank" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Nuxt on GitHub<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Documentation<!--v-if--></span></button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Design Kit<!--v-if--></span></button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Enterprise</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><button type="button" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Support<!--v-if--></span></button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Agencies<!--v-if--></span></button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Jobs<!--v-if--></span></button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Sponsors<!--v-if--></span></button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Solutions</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://content.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Nuxt Content<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://devtools.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Nuxt DevTools<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://image.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Nuxt Image<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://pohon.vinicunca.dev/" rel="noopener noreferrer" target="_blank" data-slot="link">Link leading slot<span data-slot="linkLabel" class="">Pohon UI<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
      </ul>
    </div>
  </div>
  <!--v-if-->
</nav>"
`;

exports[`FooterColumns > renders with link-trailing slot correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class="">
    <div>
      <h3 data-slot="label" class="">Community</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://nuxters.nuxt.com" rel="noopener noreferrer" target="_blank" data-slot="link"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLeadingIcon" class=""></svg><span data-slot="linkLabel" class="">Nuxters<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>Link trailing slot</a></li>
        <li data-slot="item" class=""><a href="https://github.com/nuxt" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt on GitHub<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>Link trailing slot
          </a></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Documentation<!--v-if--></span>Link trailing slot
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Design Kit<!--v-if--></span>Link trailing slot
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Enterprise</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Support<!--v-if--></span>Link trailing slot
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Agencies<!--v-if--></span>Link trailing slot
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Jobs<!--v-if--></span>Link trailing slot
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Sponsors<!--v-if--></span>Link trailing slot
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Solutions</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://content.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Content<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>Link trailing slot
          </a></li>
        <li data-slot="item" class=""><a href="https://devtools.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt DevTools<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>Link trailing slot
          </a></li>
        <li data-slot="item" class=""><a href="https://image.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Image<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>Link trailing slot
          </a></li>
        <li data-slot="item" class=""><a href="https://pohon.vinicunca.dev/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Pohon UI<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>Link trailing slot
          </a></li>
      </ul>
    </div>
  </div>
  <!--v-if-->
</nav>"
`;

exports[`FooterColumns > renders with right slot correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class="">
    <div>
      <h3 data-slot="label" class="">Community</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://nuxters.nuxt.com" rel="noopener noreferrer" target="_blank" data-slot="link"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLeadingIcon" class=""></svg><span data-slot="linkLabel" class="">Nuxters<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://github.com/nuxt" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt on GitHub<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Documentation<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Design Kit<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Enterprise</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Support<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Agencies<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Jobs<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Sponsors<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Solutions</h3>
      <ul data-slot="list" class="">
        <li data-slot="item" class=""><a href="https://content.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Content<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://devtools.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt DevTools<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://image.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Image<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://pohon.vinicunca.dev/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Pohon UI<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
      </ul>
    </div>
  </div>
  <div data-slot="right" class="">Right slot</div>
</nav>"
`;

exports[`FooterColumns > renders with ui correctly 1`] = `
"<nav data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class="">
    <div>
      <h3 data-slot="label" class="">Community</h3>
      <ul data-slot="list" class="lg:gap-1.5">
        <li data-slot="item" class=""><a href="https://nuxters.nuxt.com" rel="noopener noreferrer" target="_blank" data-slot="link"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLeadingIcon" class=""></svg><span data-slot="linkLabel" class="">Nuxters<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span></a></li>
        <li data-slot="item" class=""><a href="https://github.com/nuxt" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt on GitHub<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Documentation<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Design Kit<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Enterprise</h3>
      <ul data-slot="list" class="lg:gap-1.5">
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Support<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Agencies<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Jobs<!--v-if--></span>
          </button></li>
        <li data-slot="item" class=""><button type="button" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Sponsors<!--v-if--></span>
          </button></li>
      </ul>
    </div>
    <div>
      <h3 data-slot="label" class="">Solutions</h3>
      <ul data-slot="list" class="lg:gap-1.5">
        <li data-slot="item" class=""><a href="https://content.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Content<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://devtools.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt DevTools<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://image.nuxt.com/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Nuxt Image<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
        <li data-slot="item" class=""><a href="https://pohon.vinicunca.dev/" rel="noopener noreferrer" target="_blank" data-slot="link">
            <!--v-if--><span data-slot="linkLabel" class="">Pohon UI<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLabelExternalIcon" class=""></svg></span>
          </a></li>
      </ul>
    </div>
  </div>
  <!--v-if-->
</nav>"
`;
